--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,20 @@
 .item-gallery-styles {
 margin-left: 5px;
 }
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
+
+input{
+  width: 500px;
+  height: 100px;
+}
